<resources>
    <string name="app_name">Spellbook</string>
    <string name="mainCardNameHint">Enter Card Name</string>
    <string name="mainCardTypeHint">Enter Card Type</string>
    <string name="mainCardManaCostHint">Enter Card Mana Cost</string>
    <string name="mainCardRarityHint">Enter Card Rarity</string>
    <string name="mainCardTextHint">Enter Card Text</string>
    <string name="no_cards_message">No cards yet...</string>
    <string name="card_collection_message">Card Collection</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm_delete">Are you sure you want to delete this user?</string>
    <string name="logout_button">Logout</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="card_name">Card Name</string>
    <string name="decks">Decks</string>
    <string name="no_decks_yet_message">No decks yet..</string>
    <string name="total_number_of_cards">Total Number of Cards:</string>
    <string name="delete_collection">Delete collection</string>
    <string name="delete_account">Delete account</string>
    <string name="admin_view_user">admin view: user</string>
    <string name="deck_name">Deck name</string>
    <string name="add_card_to_deck">Add card to deck:</string>
    <string name="back_arrow">back arrow</string>
    <string name="mana_cost">Mana Cost</string>
    <string-array name="cards">
        <item>One</item>
        <item>Two</item>
        <item>Three</item>
        <item>Four</item>
        <item>Five</item>
    </string-array>
</resources>