<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".SettingsFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/settingsFragment_textViewSettingsMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Settings"
        android:textSize="25sp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="75dp"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/settingsFragment_textViewTotalCardDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_number_of_cards"
        android:textSize="20sp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="190dp"
        android:gravity="center"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/settingsFragment_buttonDeleteCollection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="400dp"
        android:gravity="center"
        android:text="@string/delete_collection" />

    <Button
        android:id="@+id/settingsFragment_buttonDeleteAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="129dp"
        android:layout_marginTop="460dp"
        android:gravity="center"
        android:text="@string/delete_account" />

</FrameLayout>